@@ -1,1 +1,13 @@
 # DragNDrop
+This is an example of a graph display using JavaFX.
+This code was based on Joel Graff's tutorial **_(Drag-and-Drop in JavaFX)_**, that you can find on his blog [monograff76](https://monograff76.wordpress.com/2015/02/17/developing-a-drag-and-drop-ui-in-javafx-part-i-skeleton-application/).
+
+## Java VM Options (for Linux only)
+If you're using IntelliJ IDEA, as I am, you may want to set a gradle run configuration. On Java VM Options field, add the following line.
+````shell script
+--module-path /Library/Java/JavaVirtualMachines/javafx-sdk-12.0.2/lib --add-modules javafx.controls,javafx.fxml,javafx.base,javafx.graphics
+````
+
+
+#
+_By: Yago Rezende_
